--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "@ashthornton/asscroll": "^2.0.11",
     "events": "^3.3.0",
     "three": "^0.146.0"
   }
